Fix z-index of subnav and nav-height on mobile

--- a/theme/styles/settings/_vars.scss
+++ b/theme/styles/settings/_vars.scss
@@ -17,7 +17,7 @@ $product-vendor-avatar-height: 2.5rem;
 $product-description-max-width: 65rem;
 
 /** Heights */
-$nav-height: 2.925rem;
+$nav-height: 3.0625rem;
 $nav-height-md: 3.036875rem;
 $nav-height-lg-xl: 3.875rem;
 
